# NovaMind-AI

./: .env.example  .gitignore  DEPLOY.md  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  tsconfig.server.json  vite.config.js  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: deploy-pages.yml
scripts/: copy-installer.mjs
server/: index.ts
server/lib/: commands.ts  documents.ts  openai.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChatWindow.tsx  ChatWorkspace.tsx  CompactComposer.tsx  Composer.tsx  DesktopShell.tsx  FeedbackButton.tsx  FileDropzone.tsx  FilePreviewModal.tsx  LandingPage.tsx  LiveScreenShareOverlay.tsx  MessageBubble.tsx  ScreenCapture.tsx  Sidebar.tsx  VoiceButton.tsx  VoiceChatOverlay.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  glow-loader.tsx  input.tsx  textarea.tsx
src/lib/: i18n.ts  landing-content.ts  models.ts  runtime.ts  smartCommands.ts  storage.ts  utils.ts
src/pages/: Chat.tsx  CodeAssistant.tsx  Documents.tsx  ScreenAI.tsx  Settings.tsx  VoiceMode.tsx
src/plugins/: builtin.ts  registry.ts  types.ts
src/services/: ai.ts  api.ts  attachments.ts  desktop.ts  filePreview.ts  screen.ts  speech.ts
src/types/: app.ts
